@@ -1,11 +1,11 @@
-begin 640 primefactors.res.gz
-M'XL("'#VJDP``W!R:6UE9F%C=&]R<RYR97,`E9-12\,P$,??^RG"\*&"*[G<
-M)9<XZ(/X,A!?YIN(3)E0T"EKQ:]OEJY9=U;!I^1_:>[^O[MF=7>]O%5*0:UN
-MEE=JUK5=]=H\S1;%ZG!B:A6#C\VVZ<KS1;%?55VKCUWSMGE9/W?ON[;:;KZJ
-MMEMW^1+6*N^I.OFX](&\`^>!C0_@G=:!V+/E0)K`D44-['2L=0\/ET7,,*Q[
-M-TF;K#%IS-HF35ESTC9K@!1PQX1]!CYF""G@<R!0?R<<DP3;AT#GF`,RC/U=
-M&/EU;`QZ+@;/(Q8(`H8$#`@8$#!&L)!``4'R@T-"@+0/Q6`G[@Y&=)ZL/?T-
-M2L-QJ(Z)F#T:-J#)>H#I2:*`!SE*8(%O71`-8&3TSB"1L=;XF&*JS;+0/[O\
-M=P^<Z,$<\`*-UCA-_9O%H<1\J@:/7I.OTG/<O[;/MHR]/2N^`:S_8W;$`P``
+begin 644 primefactors.res.gz
+M'XL("*@9:U```W!R:6UE9F%C=&]R<RYR97,`E9--2\-`$(;O^15+\1#!AIV/
+MW=FUD(-X*8B7>A.1*A4"6J6)^/?-A]FT8SQXVKRSF7?GF6$V=]?K6V,,E.9F
+M?6463=T4K]738I5M?FZP-&WPL=I737Z^RKK3E*7Y.%1ONY?M<_-^J(O][JNH
+MFVV3DJ@TZ9N+DY_S$#EX\`$$0X3@K8TL09Q$M@R>'5D0;]NW[N'A,FL=QK.K
+MIM>8-/6:DG:]YJ2EURYI@#[@)\/!02:'V`=""D0><N)D$MT0`IMB'AB%AEPX
+MJM<+(@7)QIJ/6"`J&%8PH&!`P:!B884"BN07AX8`73YD8SF0YNE.AY^CM*/T
+MPBP2"`7!L@L`\_,CA0QZ@"`*VOFHL(6$@D=B1N<PM!9SS=4/_;.W<^1>D2^!
+E+@BMI7G6OPH;C9>3LQSM2RCZA>OVZ;/.VSZ>9=\SCXG<I@,`````
 `
 end
